cambios del 14/4:

Game: 
	refactor de broker por player, porque pensaba que así es más legible.
	borrado el \n que dan las acciones de los bots

Broker:
	Cambiado el método buy y sell para soportar cantidades (lista de parejas).
	Cambios en el texto.
	Creado Show portfolio.

Player:
	Ahora cada player tiene una lista de parejas de Asset con cantidad que posee del asset.

Market: 
	Mil cosas para soportar cantidades y deshacerse de Ownership de assets.

Asset: 
	Quitado el ownership y añadido un contador de acciones vendidas global que es el que usaremos para decidir cuales quiebran.
	
Bot: 
	Ask new location ahora solo funcionará el 50% de las veces. //en un futuro se hará para que sean propensos a ir a la oficina

Location: 
	Añadida excepcion en performAction si el indice se sale aunque no debería.

Map: 
	Refactor a Worldmap por conflicto con Map de java.util

Actions (en general): 	
	
	Arreglado el texto de aquellas defectuosas.





Nueva implementación:

Game:	
	Contiene el mapa de locations, al broker (player con input), el market, y en un futuro una lista de MODS(players sin input).

Location:
	Clase abstracta para los lugares. 
	Contiene una lista de players que están en esa location en el momento actual.
	Contiene una lista de actions que se pueden hacer desde esa location

Action:
	Clase abstracta para las acciones. Solo tiene método perform, que recibe un player y lo modifica (i.e. le baja la mentalHealth)

Map:
	Contiene la lista de locations. Aquí es donde se guardan los objetos de la clase HOME, Park, etc. Importante que solo haya un objeto de cada location.
	Implementa la intefaz LocationChanger

LocationChanger:
	Todos los players van a tener una referencia al mapa, pero enmascarada bajo esta interfaz, que solo permite cambiarte de location

Player Class:
	Clase abstracta para cualquier jugador (ya sea el usuario o los MODS). Guarda la info sobre mentalHealth, dinero, 