@@ -1,10 +1,10 @@
 package controller;
 
 public class main {
-	
-	public static void main(String[] args) {		
-		Game game = new Game();
-		game.run();			
-	}
-	
+
+    public static void main(String[] args) {
+        Game game = new Game();
+        game.run();
+    }
+
 }
