@@ -1,0 +1,17 @@
+package model.players.marketstrategies;
+
+import model.players.Bot;
+
+public class dumbassStrategy implements MarketStrategy {
+
+
+    @Override
+    public void buyAsset(Bot b) {
+
+    }
+
+    @Override
+    public void sellAsset(Bot b) {
+
+    }
+}
