@@ -1,0 +1,16 @@
+package model.players.marketstrategies;
+
+import model.players.Bot;
+
+public class knowledgeableStrategy implements MarketStrategy{
+
+    @Override
+    public void buyAsset(Bot b) {
+
+    }
+
+    @Override
+    public void sellAsset(Bot b) {
+
+    }
+}
